# authclaw-mvp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TEST_ENVIRONMENT_READINESS_REPORT.md  audit.csv  authclaw_project_plan_actual.txt  chatgpt-share-decoded.json  chatgpt-share.html  check3.sql  check_rls.sql  create-analysis-pdf.py  demo_client.py  docker-compose.yml  extract-actual-pdf.py  extract-share.mjs  fix_refresh.py  fix_refresh2.py  git_files.txt  inspect.sql  parse_openapi.py  pdf_content.txt  q.sql  read_pdf.py  rls.sql  test2.py  tree.py  tree_output.txt  update.sql  update_hash2.py
apps/api/: .dockerignore  .env.example  .semgrepignore  Dockerfile  add_provider.py  assign_roles.sql  audit_matrix.py  audit_script.py  calc_scores.py  check2.py  check_global.py  check_gw_requests.py  check_prov.py  check_providers.py  check_rls.py  check_rules.py  check_uid.py  disable_rls.py  generate_key.py  pyproject.toml  pyproject.toml_extras  requirements.txt  reset_password.py  simulate_traffic.py  tamper.sql  test_approvals.py  test_approvals2.py  test_approvals3.py  test_approvals_loop.py  test_assistant.py  test_contracts.py  test_create_route.py  test_db_direct.py  test_gateway_schema.py  test_groq.py  test_gw_logic.py  test_hash.py  test_presidio.py  update_rule.py  verify.py  (+2 more)
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/opa/: gateway.rego
apps/api/scripts/: acceptance_tests.py  backfill_clickhouse.py  calc_compliance.py  demo_governance.py  mock_openai.py  run_load_tests.sh  seed.py  seed_compliance_catalog.py  seed_sprint3_demo.py  seed_sprint4_demo.py  seed_sprint5_demo.py  test_evidence.py  verify_gateway_fixes.py  verify_phase1.py  verify_phase_b.py  verify_yaml.py
apps/api/tests/: conftest.py  gateway_test_helpers.py  run_sprint1_benchmark.py  test_adapters_contract.py  test_api.py  test_api_keys_singleton.py  test_audit_concurrency.py  test_azure_auth.py  test_azure_connector.py  test_clickhouse_repository.py  test_cross_tenant_isolation.py  test_e2_1_reversible_tokenization.py  test_e2_3_streaming_closeout.py  test_e2_3_streaming_contracts.py  test_e2_3_streaming_integration.py  test_e2_3_streaming_security.py  test_e4_3_benchmark_harness.py  test_e4_3_performance_closeout.py  test_e4_3_performance_contracts.py  test_e4_4_audit_export_builder.py  test_e4_4_audit_export_contracts.py  test_e4_4_audit_path_hardening.py  test_e4_4_chain_proof.py  test_e4_4_package_builder.py  test_e4_4_package_verification.py  test_e4_4_signing.py  test_engine.py  test_gateway_api_contract.py  test_gateway_mvp_phase1.py  test_gateway_mvp_phase2.py  test_gateway_mvp_phase3.py  test_gateway_mvp_phase4.py  test_gateway_mvp_phase5.py  test_gateway_mvp_phase6.py  test_hash_verification.py  test_limiter.py  test_opa_input_builder.py  test_opa_integration.py  test_opa_runtime.py  test_pdf_gap_audit_kafka_clickhouse.py  (+51 more)
sdk/python/: CHANGELOG.md  LICENSE  README.md  benchmark_sdk_import.py  pyproject.toml
sdk/python/authclaw/: README.md  __init__.py  auth.py  client.py  client_contracts.py  config.py  exceptions.py  models.py  retry.py  streaming.py  transport.py  types.py  version.py
(+419 files in other folders)
